	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12016 Speed Increasing Potion: A potion which increases the moving speed of a character for a duration.
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

=========================

03/28
	* Changed droprate of Einbroch/Lighthalzen monsters. [Vicious]
03/27	* Removed EVENT bonuses from event items: [Lupus]
	  2646,Bunch_of_Carnations, 2647,Nile_Rose, 2668,Woman_Glory, 5097,2_Years_Anniversary_Hat
	  NOTE: If you want to use these or other EVENT BONUSES, set them via 'setitemscript' command
		in your scripts. Check X-Mas Rings Event as example.
	  Poki#3, please, update the item desc. Or explain that the bonuses are gone just after the events
03/26
	* 5136,Louise's Santa_Hat lost its EVENT autocast bonus. [Lupus]
	* Added missing slots to Alice Doll, Marionette Doll, Kabuki Mask & Kawaii_Ribbon [Lupus]
03/24
	* Fixed 5123,Ulle's_Cap bug [Lupus]
03/22
	* Changed preserve's cost to 30 sp. [Skotlex]
	* Changed Soul Breaker's cast time to 700ms. [Skotlex]
	* Updated Elemental Converter ingredients. Thanks2 Haplo [Lupus]
03/21
	* Fixed the inf2 for BA_DISSONANCE to be dance-skill. [Skotlex]
	* Myst Case Card will drop GB even if the card combo's on [Lupus]
03/20
	* Fixed splash area of Ganbantein [Skotlex]
	* Updated atk,def,mdef of NJ/GS items, thanks to Haplo [Lupus]
	- also re-fixed few blackhole89 (def, atk) values
	* Uploaded Kargha's updated item_db.txt with the Gunslinger/Ninja usage bits set.
	  Looked correct to me, if there should still be errors, feel free to revert. [blackhole89]
03/18
	* Updated price and such for NJ/SG weapons
	* Fixed tons of wrong weight, wep lvlm req level items. Big thanks to KarLaeda and Haplo [Lupus]
03/15
	* Alice Doll hat fixed effect, thanks2 Sir_Loon [Lupus]
	- Fixed Moonlit's inf2 not being set to ensemble skill. Thanks to Haplo.
	  [Skotlex]
03/14