@@ -3,6 +3,16 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK. 
 
+2006/03/29
+	* Some cleaning of the mob_ai. Mobs should stop chasing once you are beyond
+	  their min_chase range. Improved rude-attacked checking when mobs can't
+	  move. [Skotlex]
+	* range3 is now used as min-chase value of mobs. [Skotlex]
+	* Added a debug message when status_change_timer fails. Report it next time
+	  it shows up. [Skotlex]
+	* Fixed tick direct modifications increasing duration instead of decreasing
+	  it. [Skotlex]
+	* You can't SG_FEEL maps already memorized. [Skotlex]
 2006/03/28
 	* Fixed the Family recall warp skills. [Skotlex]
 	* Fixed pc_percentheal giving life when the rates are negative. [Skotlex]
